src/App.css
/****************************************************App.js - START - ****************************************************/
.App {
  /* text-align: center; */
}

.App-logo {
  height: 10vmin;
  pointer-events: none;
}

.fullComponent {
  height: 100vh;
}

.fullComponentCards {
  height: 100vh;
}

.component-header {
  padding-top: 100px;
}

.navigation {
  background-color: #282c34;
  min-height: 5vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: right;
  font-size: calc(10px + 2vmin);
  color: white;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
}

.sub-nav-item {
  color: aliceblue;
  padding: 10px;
}

.App-header {
  background-color: #282c34;
  min-height: 5vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

/****************************************************App.js - END - ****************************************************/

.projRow {
  /* background-color: #282c34; */
  min-height: 5vh;
  display: flex;
  flex-direction: row;
  align-items: left;
  justify-content: left;
  font-size: calc(10px + 2vmin);
  /* color: white; */
  padding: 30px;
}

.projects-all {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.project {
  padding: 15px;
}

